--- a/cookbook/meal-prep/upside-down-tetris/page1.html
+++ b/cookbook/meal-prep/upside-down-tetris/page1.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Upside-down Tetris (Exercise)</title>
         <link href="css/setup.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style_simple.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>
         <div id="game-container">
@@ -14,10 +14,18 @@
             <div id="block-area">
                 <!-- ADD YOUR HTML CODE INSIDE OF THIS DIV-->
 
+                <!--
+                    Students are probably unfamiliar with how
+                    to add multiple classes to an HTML element.
+
+                    Show them that you can do so by adding both
+                    classes in the class attribute, separated
+                    by a space.
+                -->
                 <div class="tetris-block red"></div>
                 <div class="tetris-block red"></div>
                 <div class="tetris-block purple"></div>
-                <div class="tetris-block orange"></div>
+                <div class="tetris-block orange long"></div>
                 <div class="tetris-block hidden"></div>
                 <div class="tetris-block orange"></div>
                 <div class="tetris-block blue"></div>
@@ -26,7 +34,7 @@
                 <div class="tetris-block green"></div>
                 <div class="tetris-block orange"></div>
                 <div class="tetris-block yellow"></div>
-                <div class="tetris-block green"></div>
+                <div class="tetris-block green long"></div>
                 <div class="tetris-block yellow"></div>
                 <div class="tetris-block green"></div>
                 <div class="tetris-block blue"></div>
@@ -36,8 +44,8 @@
                 <div class="tetris-block teal"></div>
                 <div class="tetris-block hidden"></div>
                 <div class="tetris-block green"></div>
-                <div class="tetris-block purple "></div>
-                <div class="tetris-block yellow "></div>
+                <div class="tetris-block purple long"></div>
+                <div class="tetris-block yellow long"></div>
                 <div class="tetris-block hidden"></div>
                 <div class="tetris-block green"></div>
                 <div class="tetris-block blue"></div>
@@ -64,7 +72,7 @@
                 <br>
                 <span class="c4">D</span><span class="c3">O</span><span class="c1">W</span><span class="c7">N</span>
                 <br>
-                <span class="c7">F</span><span class="c5">R</span><span class="c2">U</span><span class="c1">I</span><span class="c6">T</span><span class="c5">S</span>
+                <span class="c7">T</span><span class="c5">E</span><span class="c2">T</span><span class="c1">R</span><span class="c6">I</span><span class="c5">S</span>
             </h1>
         </div>
     </body>
