--- a/cookbook/meal-prep/upside-down-tetris/page2.html
+++ b/cookbook/meal-prep/upside-down-tetris/page2.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Upside-down Tetris (Exercise)</title>
         <link href="css/setup.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style_fancy.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>
         <div id="game-container">
