license, license breakdown, and assn demos

--- a/cookbook/meal-prep/generic-license/page0.html
+++ b/cookbook/meal-prep/generic-license/page0.html
@@ -3,12 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Driver's License (Project)</title>
+        <title>Generic License (Project)</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="css/setup.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>
+        <!--
+            Students shouldn't need to modify the HTML below,
+            but they are not prohibited from doing so, either
+            to make the CSS coding easier for themselves, or
+            to customize the license more.
+
+            Or, if they really want to challenge themselves,
+            they could try to build the license HTML from 
+            scratch, though I doubt many will want to try that.
+        -->
+        
         <!--
             NOTE TO STUDENTS: You don't NEED to modify the HTML in this file.
             However, you are allowed to, if it helps you complete the project
