--- a/cookbook/meal-prep/studio-gallery/page0.html
+++ b/cookbook/meal-prep/studio-gallery/page0.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alley Posters (Exercise)</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <title>Studio Gallery (Exercise)</title>
         <link href="css/setup.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>
         <div class="scene">
-            <div class="alley">
-                <div class="sky"></div>
+            <div class="gallery">
                 <div class="wall back"></div>
+                <div class="wall left"></div>
+                <div class="wall right"></div>
+                <div class="ceiling"></div>
                 <div class="floor"></div>
                 <div class="showing-area">
 
