--- a/cookbook/appetizers/google-fonts.html
+++ b/cookbook/appetizers/google-fonts.html
@@ -484,7 +484,7 @@
                                 in there too.
                             </p>
                             <p>
-                                Ms Madi is also still in there, just condensed,
+                                Ms Madi is also still in there, just collapsed,
                                 so that we can focus on one font family at a time.
                             </p>
                         </div>
@@ -546,7 +546,7 @@
                             <p>
                                 To be clear, you're never going to use them
                                 together like that.  They're only showing you
-                                examples of how you'd use them side-by-side.
+                                examples side-by-side of how you'd use them.
                             </p>
                             <p>
                                 If you want to use Ms Madi in an element, then 
