fixes and additions
added transform property
added w3schools and mdn references
added in other border-styles
fixed missing dog images

--- a/cookbook/seasonings/border.html
+++ b/cookbook/seasonings/border.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>border Properties</title>
-        <link href="css/border.css" rel="stylesheet">
+        <link href="css/border.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -23,19 +23,27 @@
             and color of a border.
         </p>
         <p>
-            The border style is the only property with special
+            The border style property is the only one with special
             keywords, so we'll focus on a couple common border 
             style values first, before combining all of the border 
             properties together.
         </p>
 
         <h3>Border Style Values</h3>
-        <h5>Solid</h5>
+        <h5>solid</h5>
         <div class="border-style-solid"></div>
-        <h5>Dashed</h5>
+        <h5>dashed</h5>
         <div class="border-style-dashed"></div>
-        <h5>Dotted</h5>
+        <h5>dotted</h5>
         <div class="border-style-dotted"></div>
+        <h5>inset</h5>
+        <div class="border-style-inset"></div>
+        <h5>outset</h5>
+        <div class="border-style-outset"></div>
+        <h5>groove</h5>
+        <div class="border-style-groove"></div>
+        <h5>ridge</h5>
+        <div class="border-style-ridge"></div>
         <br>
 
         <h3>Combining Border Properties</h3>
@@ -129,6 +137,22 @@
                 elit. Voluptate voluptatem excepturi aliquid nostrum 
                 cumque reprehenderit debitis et corrupti labore.
             </p>
+        </div>
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/css/css_border.asp"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/border"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
         </div>
     </body>
 </html>
