--- a/cookbook/seasonings/color.html
+++ b/cookbook/seasonings/color.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>color Property</title>
-        <link href="css/color.css" rel="stylesheet">
+        <link href="css/color.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -52,6 +52,22 @@
                 That's why this text is red: Class Selectors
                 are more specific than HTML Element Selectors.
             </p>
+        </div>
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_text_color.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/color"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
         </div>
     </body>
 </html>
