--- a/cookbook/seasonings/display.html
+++ b/cookbook/seasonings/display.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>display Property (Basic)</title>
-        <link href="css/display.css" rel="stylesheet">
+        <link href="css/display.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -179,6 +179,23 @@
             <div class="inline-block-styled">INLINE-BLOCK</div>
             <div class="block-styled">BLOCK (STYLED)</div>
             <div class="inline-block-styled">INLINE-BLOCK</div>
+        </div>
+
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_class_display.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/display"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
         </div>
     </body>
 </html>
