--- a/cookbook/seasonings/list-style-type.html
+++ b/cookbook/seasonings/list-style-type.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>list-style-type Property</title>
-        <link href="css/list-style-type.css" rel="stylesheet">
+        <link href="css/list-style-type.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -50,5 +50,22 @@
             <li class="no-bullet">different bullet types</li>
             <li class="disc-bullet">within the same list!</li>
         </ul>
+        
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_list-style-type.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
+        </div>
     </body>
 </html>
