--- a/cookbook/seasonings/padding.html
+++ b/cookbook/seasonings/padding.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>padding Properties</title>
-        <link href="css/padding.css" rel="stylesheet">
+        <link href="css/padding.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -187,6 +187,23 @@
                     earlier.
                 </p>
             </div>
+        </div>
+        
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/css/css_padding.asp"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/padding"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
         </div>
     </body>
 </html>
