--- a/cookbook/seasonings/text-align.html
+++ b/cookbook/seasonings/text-align.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>text-align Property</title>
-        <link href="css/text-align.css" rel="stylesheet">
+        <link href="css/text-align.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -85,5 +85,22 @@
             WITHIN the element it is set on.  It doesn't 
             tell an element how to align itself.
         </p>
+        
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_text_text-align.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/text-align"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
+        </div>
     </body>
 </html>
