--- a/cookbook/seasonings/text-decoration.html
+++ b/cookbook/seasonings/text-decoration.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>text-decoration Property</title>
-        <link href="css/text-decoration.css" rel="stylesheet">
+        <link href="css/text-decoration.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -60,5 +60,23 @@
             maxime officiis ea, nobis dolor magnam, 
             libero nostrum animi sed repellendus nihil at.
         </p>
+
+        
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_text_text-decoration.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/text-decoration"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
+        </div>
     </body>
 </html>
