--- a/cookbook/seasonings/background-color.html
+++ b/cookbook/seasonings/background-color.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>background-color Property</title>
-        <link href="css/background-color.css" rel="stylesheet">
+        <link href="css/background-color.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -56,6 +56,22 @@
                 increase the area of the background-color
                 around the text; only padding does that.
             </p>
+        </div>
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_background-color.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/background-color"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
         </div>
     </body>
 </html>
