--- a/cookbook/seasonings/border-radius.html
+++ b/cookbook/seasonings/border-radius.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>border-radius Properties</title>
-        <link href="css/border-radius.css" rel="stylesheet">
+        <link href="css/border-radius.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -182,5 +182,21 @@
             alt="a dog in the park"
             class="unframed-image"
         >
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/css3_pr_border-radius.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
+        </div>
     </body>
 </html>
