--- a/cookbook/seasonings/font-style.html
+++ b/cookbook/seasonings/font-style.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>font-style Property</title>
-        <link href="css/font-style.css" rel="stylesheet">
+        <link href="css/font-style.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -44,5 +44,22 @@
             over the years, and it is now preferable to 
             use font-style in CSS over &lt;i&gt; in HTML.
         </p>
+        
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_font_font-style.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/font-style"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
+        </div>
     </body>
 </html>
