--- a/cookbook/seasonings/width.html
+++ b/cookbook/seasonings/width.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>width Properties</title>
-        <link href="css/width.css" rel="stylesheet">
+        <link href="css/width.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
@@ -228,6 +228,23 @@
             <div class="inline-block inline-block-width-5 border-box ">
                 width: 100%;
             </div>
+        </div>
+        
+        <div class="resources">
+            <h4>Additional Resources</h4>
+            <a 
+                href="https://www.w3schools.com/cssref/pr_dim_width.php"
+                target="_blank"
+            >
+                w3schools 
+            </a>
+            <br>
+            <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/width"
+                target="_blank"
+            >
+                mdn web docs
+            </a>
         </div>
     </body>
 </html>
