--- a/cookbook/appetizers/identifying-boxes.html
+++ b/cookbook/appetizers/identifying-boxes.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/complete_cropped.png" 
+                                src="images/identifying-boxes/complete_cropped.png" 
                                 alt="A completed version of the project"
                             >
                             <figcaption>A completed version of the project</figcaption>
@@ -128,7 +128,7 @@
                             </p>
                         </div>
                         <div class="imageContainer">
-                            <img src="images/help_01.png" alt="vscodeapp.png">
+                            <img src="images/identifying-boxes/help_01.png" alt="vscodeapp.png">
                             <figcaption>
                                 The largest (red) box, representing the largest grouping
                                 of content
@@ -141,21 +141,28 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Next, we identify the smaller groupings of content
+                                Next, we identify the smaller 
+                                groupings of content
                                 inside of the large red box.
                             </p>
                             <p>
-                                There are different ways of breaking up the content
+                                There are different ways of 
+                                breaking up the content
                                 inside, but I recommend going one line at a time
                                 down the design and applying this rule:
                             </p>
                             <p>
-                                If it's on its own line, it can get its own box.
-                                <br>
-                                However, if it's side-by-side with something else,
-                                then that content and whatever it's side-by-side
-                                with should have their own boxes (sometimes
-                                within a larger box for the whole line).
+                                <em>
+                                    If it's on its own line, 
+                                    it can get its own box.
+                                    <br>
+                                    However, if it's side-by-side 
+                                    with something else,
+                                    then that content and 
+                                    whatever it's side-by-side
+                                    with should have their own boxes (sometimes
+                                    within a larger box for the whole line).
+                                </em>
                             </p>
                             <p>
                                 You can see that logic applied by looking
@@ -175,7 +182,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/help_02.png" 
+                                src="images/identifying-boxes/help_02.png" 
                                 alt="Three additional red boxes inside of the big red box" 
                             >
                             <figcaption>
@@ -225,7 +232,7 @@
                             </p>
                         </div>
                         <div class="imageContainer">
-                            <img src="images/help_03.png" alt="extensionssearch.png">
+                            <img src="images/identifying-boxes/help_03.png" alt="extensionssearch.png">
                             <figcaption>
                                 Green boxes representating additional HTML Elements 
                                 inside of the left red box
@@ -263,7 +270,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/help_04.png" 
+                                src="images/identifying-boxes/help_04.png" 
                                 alt="Light blue boxes representing additional content" 
                             />
                             <figcaption>
@@ -300,7 +307,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/help_05.png" 
+                                src="images/identifying-boxes/help_05.png" 
                                 alt="Dark blue boxes representing additional content" 
                             />
                             <figcaption>
@@ -332,7 +339,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/help_06.png" 
+                                src="images/identifying-boxes/help_06.png" 
                                 alt="Purple boxes representing additional content" 
                             />
                             <figcaption>
@@ -367,7 +374,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/help_07.png" 
+                                src="images/identifying-boxes/help_07.png" 
                                 alt="Green boxes representing additional content" 
                             />
                             <figcaption>
@@ -397,7 +404,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/help_08.png" 
+                                src="images/identifying-boxes/help_08.png" 
                                 alt="Light blue boxes representing additional content" 
                             />
                             <figcaption>
@@ -424,7 +431,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/complete_cropped.png" 
+                                src="images/identifying-boxes/complete_cropped.png" 
                                 alt="Light blue boxes representing additional content" 
                             />
                             <figcaption>
@@ -461,7 +468,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/unstyled.png" 
+                                src="images/identifying-boxes/unstyled.png" 
                                 alt="Light blue boxes representing additional content" 
                             />
                             <figcaption>
@@ -506,7 +513,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/partiallystyled.png" 
+                                src="images/identifying-boxes/partiallystyled.png" 
                                 alt="The license with only the outermost containers styled" 
                             />
                             <figcaption>
