--- a/cookbook/appetizers/google-fonts.html
+++ b/cookbook/appetizers/google-fonts.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Identifying Layout Boxes - Appetizers - The Coding Cookbook</title>
+        <title>Google Fonts - Appetizers - The Coding Cookbook</title>
         <link href="../css/cookbook.css" rel="stylesheet">
         <link href="../css/appetizer.css" rel="stylesheet">
         <link href="../css/lightbox.css" rel="stylesheet">
