appetizers and navigation

--- a/cookbook/appetizers/google-fonts.html
+++ b/cookbook/appetizers/google-fonts.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Google Fonts - Appetizers - The Coding Cookbook</title>
+        <title>Utilizing Google Fonts - Appetizers - The Coding Cookbook</title>
         <link href="../css/cookbook.css" rel="stylesheet">
         <link href="../css/appetizer.css" rel="stylesheet">
         <link href="../css/lightbox.css" rel="stylesheet">
@@ -13,16 +13,16 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="../">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "For a web designer, using Google Fonts is like including
                     <br>
                     a pre-cooked meat in an entree; it saves you time and energy."
                 </div>
                 <div id="navLinks">
-                    <h2><a href="ingredients.html">HTML</a></h2>
-                    <h2><a href="seasonings.html">CSS</a></h2>
-                    <h2><a href="recipes.html">LAYOUTS</a></h2>
+                    <h2><a href="../ingredients.html">HTML</a></h2>
+                    <h2><a href="../seasonings.html">CSS</a></h2>
+                    <h2><a href="../recipes.html">LAYOUTS</a></h2>
                 </div>
             </header>
         </nav>
@@ -588,5 +588,6 @@
             <span id="lightboxCloser" class="closer">×</span>
           </div>
         <script src="../js/lightbox.js"></script>
+        <script src="../js/hideNav.js"></script>
     </body>
 </html>
