--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -13,14 +13,14 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="../">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "This appetizer will help get you ready for the main course."
                 </div>
                 <div id="navLinks">
-                    <h2><a href="ingredients.html">HTML</a></h2>
-                    <h2><a href="seasonings.html">CSS</a></h2>
-                    <h2><a href="recipes.html">LAYOUTS</a></h2>
+                    <h2><a href="../ingredients.html">HTML</a></h2>
+                    <h2><a href="../seasonings.html">CSS</a></h2>
+                    <h2><a href="../recipes.html">LAYOUTS</a></h2>
                 </div>
             </header>
             <header id="bottomHeader">
@@ -1318,6 +1318,7 @@
             <img id="lightbox" src="" alt="">
             <span id="lightboxCloser" class="closer">×</span>
           </div>
-        <script src="js/lightbox.js"></script>
+        <script src="../js/lightbox.js"></script>
+        <script src="../js/hideNav.js"></script>
     </body>
 </html>
