--- a/cookbook/ingredients.html
+++ b/cookbook/ingredients.html
@@ -11,7 +11,7 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="./">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "In a web page, HTML elements are like the ingredients used to make a cake."
                 </div>
@@ -55,5 +55,6 @@
         </div>
         <script src="js/ingredients.js"></script>
         <script src="js/cookbook.js"></script>
+        <script src="js/hideNav.js"></script>
     </body>
 </html>
