--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -11,7 +11,7 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Chef's Cookbook</a></h2>
+                <h2 id="brand"><a href="./meal-prep.html">The Chef's Cookbook</a></h2>
                 <div id="quote">
                     "Use these demos to help you prepare, before serving the main course to students"
                 </div>
