--- a/cookbook/recipes.html
+++ b/cookbook/recipes.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Ingredients - The Coding Cookbook</title>
+        <title>Design Layouts - The Coding Cookbook</title>
         <link href="css/cookbook.css" rel="stylesheet">
     </head>
     <body>
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="./">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "In a web page, layouts are like the recipes that put our
                     ingredients and seasonings together to create something amazing."
@@ -56,5 +56,6 @@
         </div>
         <script src="js/ingredients.js"></script>
         <script src="js/cookbook.js"></script> -->
+        <script src="js/hideNav.js"></script>
     </body>
 </html>
