--- a/cookbook/troubleshooting.html
+++ b/cookbook/troubleshooting.html
@@ -11,7 +11,7 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="./">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "Hmm...that didn't turn out quite right..."
                 </div>
