--- a/cookbook/appetizers/identifying-boxes.html
+++ b/cookbook/appetizers/identifying-boxes.html
@@ -13,16 +13,16 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="../">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "For a web designer, knowing how to identify the bones of 
                     a layout<br>is just as important as a chef knowing how to 
                     fillet a fish."
                 </div>
                 <div id="navLinks">
-                    <h2><a href="ingredients.html">HTML</a></h2>
-                    <h2><a href="seasonings.html">CSS</a></h2>
-                    <h2><a href="recipes.html">LAYOUTS</a></h2>
+                    <h2><a href="../ingredients.html">HTML</a></h2>
+                    <h2><a href="../seasonings.html">CSS</a></h2>
+                    <h2><a href="../recipes.html">LAYOUTS</a></h2>
                 </div>
             </header>
         </nav>
@@ -539,5 +539,6 @@
             <span id="lightboxCloser" class="closer">×</span>
           </div>
         <script src="../js/lightbox.js"></script>
+        <script src="../js/hideNav.js"></script>
     </body>
 </html>
