--- a/cookbook/seasonings-cheatsheet.html
+++ b/cookbook/seasonings-cheatsheet.html
@@ -156,7 +156,7 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="./">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "Sometimes a dish must be baked multipled times before it's ready to be served."
                 </div>
