--- a/cookbook/seasonings.html
+++ b/cookbook/seasonings.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Seasonings - The Coding Cookbook</title>
+        <title>CSS Seasonings - The Coding Cookbook</title>
         <link href="css/cookbook.css" rel="stylesheet">
     </head>
     <body class="seasonings">
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
+                <h2 id="brand"><a href="./">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "In a web page, CSS Properties are like the seasonings 
                     used to enhance<br>the flavor and appearance of your food."
@@ -56,5 +56,6 @@
         </div>
         <script src="js/seasonings.js"></script>
         <script src="js/cookbook.js"></script>
+        <script src="js/hideNav.js"></script>
     </body>
 </html>
