--- a/cookbook/ingredients/icon-library.html
+++ b/cookbook/ingredients/icon-library.html
@@ -25,7 +25,7 @@
         <p>
             The icon library in this example come from a 
             site called 
-            <a href="https://fontawesome.com/icons">
+            <a href="https://fontawesome.com/icons" target="_blank">
                 Font Awesome
             </a>.
         </p>
@@ -47,7 +47,7 @@
         <h3>Where to Find and How to Use the Library's Icons</h3>
         <p>
             Over 2000 icons are available for free at
-            <a href="https://fontawesome.com/icons/">
+            <a href="https://fontawesome.com/icons/" target="_blank">
                 https://fontawesome.com/icons/
             </a>
         </p>
