--- a/cookbook/index.html
+++ b/cookbook/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Coding Cookbook</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="css/cookbook.css" rel="stylesheet">
         <link href="css/appetizer.css" rel="stylesheet">
         <link href="css/lightbox.css" rel="stylesheet">
@@ -14,21 +15,52 @@
         <nav>
             <header id="topHeader">
                 <h2 id="brand"><a href="./">The Coding Cookbook</a></h2>
-                <div id="quote">
-                    "Take a peek inside! We have a wide variety of ingredients, 
-                    seasonings, and more!"
-                </div>
+                <div id="quote"></div>
                 <div id="navLinks">
-                    <h2><a href="ingredients.html">HTML</a></h2>
-                    <h2><a href="seasonings.html">CSS</a></h2>
-                    <h2><a href="recipes.html">LAYOUTS</a></h2>
+                    <div class="dropdown-menu">
+                        <h2 class="dropdown-trigger">
+                            <a href="ingredients.html">
+                                HTML
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                        </h2>
+                        <div class="dropdown-items">
+                            <h2><a href="ingredients.html">Elements</a></h2>
+                            <h2><a href="ingredients-cheatsheet.html">Cheatsheet</a></h2>
+                        </div>
+                    </div>
+                    <div class="dropdown-menu">
+                        <h2 class="dropdown-trigger">
+                            <a href="seasonings.html">
+                                CSS
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                        </h2>
+                        <div class="dropdown-items">
+                            <h2><a href="seasonings.html">Properties</a></h2>
+                            <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
+                        </div>
+                    </div>
+                    <h2><a href="recipes.html">Layouts</a></h2>
+                    <div class="dropdown-menu">
+                        <h2 class="dropdown-trigger">
+                            <a href="more.html">
+                                More
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                        </h2>
+                        <div class="dropdown-items">
+                            <h2><a href="appetizers.html">Tutorials</a></h2>
+                            <h2><a href="troubleshooting.html">Troubleshooting</a></h2>
+                        </div>
+                    </div>
                 </div>
             </header>
         </nav>
         
         <header id="title" class="">
             <h1>Welcome to the Coding Cookbook!</h1>
-            <h3>Your FIRST supplier for HTML, CSS, and Layout resources</h3>
+            <h3>Your FIRST supplier for HTML, CSS, and Layout resources (and more!)</h3>
         </header>
         
         <div id="cookbookPage" class="recipeCards cookbookWithLinks">
