--- a/cookbook/seasonings/box-shadow.html
+++ b/cookbook/seasonings/box-shadow.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>box-shadow Properties</title>
+        <title>box-shadow Property</title>
         <link href="css/box-shadow.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
