--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meal Prep - The Chef's Cookbook</title>
+        <title>Meal Prep - The Instructor's Cookbook</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="css/cookbook.css" rel="stylesheet">
     </head>
@@ -12,10 +12,10 @@
         <div id="background"></div>
         <nav>
             <header id="topHeader">
-                <h2 id="brand"><a href="./meal-prep.html">The Chef's Cookbook</a></h2>
+                <h2 id="brand"><a href="./meal-prep.html">The Instructor's Cookbook</a></h2>
                 <div id="quote"></div>
                 <div id="navLinks">
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu meal-prep-filter">
                         <h2 class="dropdown-trigger">
                             <a href="meal-prep.html">
                                 By Category
@@ -29,7 +29,7 @@
                             <h2><a href="meal-prep.html?category=project">Projects</a></h2>
                         </div>
                     </div>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu meal-prep-filter">
                         <h2 class="dropdown-trigger">
                             <a href="meal-prep.html">
                                 By Week
